tests/ui/parser/issues/issue-44406.stderr
error: invalid `struct` delimiters or `fn` call arguments
  --> $DIR/issue-44406.rs:3:9
   |
LL |         bar(baz: $rest)
   |         ^^^^^^^^^^^^^^^
...
LL |     foo!(true);
   |     ---------- in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)
help: if `bar` is a struct, use braces as delimiters
   |
LL -         bar(baz: $rest)
LL +         bar { baz: $rest }
   |
help: if `bar` is a function, use the arguments directly
   |
LL -         bar(baz: $rest)
LL +         bar($rest)
   |

error: aborting due to 1 previous error

